--- a/ProjetoFarmacia/src/com/projetofarmacia/interfaces/ConsultarProduto.form
+++ b/ProjetoFarmacia/src/com/projetofarmacia/interfaces/ConsultarProduto.form
@@ -110,7 +110,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/recursos/product-edit.png"/>
+              <Image iconType="3" name="/com/projetofarmacia/resources/product-edit.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Editar"/>
           </Properties>
@@ -127,7 +127,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/recursos/Folder Search-certo.png"/>
+              <Image iconType="3" name="/com/projetofarmacia/resources/Folder Search-certo.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Procurar"/>
           </Properties>
